@@ -374,6 +374,9 @@ if "%KARAF_PROFILER%" == "" goto :RUN
         --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED ^
         --add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED ^
         --add-exports java.security.sasl/com.sun.security.sasl=ALL-UNNAMED ^
+        --add-exports=java.base/sun.security.x509=ALL-UNNAMED ^
+        --add-exports=java.base/sun.security.rsa=ALL-UNNAMED ^
+        --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED ^
         -classpath "%CLASSPATH%" ^
         -Dkaraf.instances="%KARAF_HOME%\instances" ^
         -Dkaraf.home="%KARAF_HOME%" ^
