@@ -1434,6 +1434,9 @@
           --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
           --add-opens=java.base/java.net=ALL-UNNAMED
           --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-exports=java.base/sun.security.x509=ALL-UNNAMED
+          --add-exports=java.base/sun.security.rsa=ALL-UNNAMED
+          --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
         </argLine>
       </properties>
       <id>surefire-jdk17</id>
